--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "@wcd/goaround.farerules-explainer",
   "version": "0.0.0",
   "scripts": {
-    "serve": "wcd-cli serve khFrtKXgTGWe7koI9o43 --open"
+    "serve": "wcd-cli serve khFrtKXgTGWe7koI9o43 --open",
+    "test": "mocha"
   },
   "dependencies": {
+    "chai": "^4.3.4",
+    "esm": "^3.2.25",
     "mocha": "^9.0.2"
-  }
+  },
+  "type": "module"
 }
