--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wcd/goaround.farerules-explainer",
-  "version": "0.0.0",
+  "name": "@traveldealz/farerules-explainer",
+  "version": "1.0.0",
   "scripts": {
     "serve": "wcd-cli serve khFrtKXgTGWe7koI9o43 --open",
     "test": "mocha"
